--- a/src/css/scss/base/_fonts.scss
+++ b/src/css/scss/base/_fonts.scss
@@ -3,10 +3,10 @@
 // -----------------------------------------------------------------------------
 // @import url('https://fonts.googleapis.com/css2?family=Aclonica&family=Oswald:wght@600&family=Poppins:wght@500;600;700;800;900&display=swap');
 // @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
 @font-face {
-    font-family: 'SF Pro Display';
+    font-family: 'Poppins';
     src: url('./../../assets/vendors/webfonts/SFProDisplay-Regular.eot');
     src: url('./../../assets/vendors/webfonts/SFProDisplay-Regular.eot?#iefix') format('embedded-opentype'),
         url('./../../assets/vendors/webfonts/SFProDisplay-Regular.woff2') format('woff2'),
@@ -19,7 +19,7 @@
 }
 
 @font-face {
-    font-family: 'SF Pro Display';
+    font-family: 'Poppins';
     // src: url('SFProDisplay-Bold.eot');
     // src: url('./../../assets/vendors/webfonts/SFProDisplay-Bold.eot');
     src: url('./../../assets/vendors/webfonts/SFProDisplay-Bold.woff');
@@ -34,7 +34,7 @@
 }
 
 @font-face {
-    font-family: 'SF Pro Display';
+    font-family: 'Poppins';
     src: url('./../../assets/vendors/webfonts/SFProDisplay-BlackItalic.eot');
     src: url('./../../assets/vendors/webfonts/SFProDisplay-BlackItalic.eot?#iefix') format('embedded-opentype'),
         url('./../../assets/vendors/webfonts/SFProDisplay-BlackItalic.woff2') format('woff2'),
@@ -47,7 +47,7 @@
 }
 
 @font-face {
-    font-family: 'SF Pro Display';
+    font-family: 'Poppins';
     src: url('./../../assets/vendors/webfonts/SFProDisplay-HeavyItalic.eot');
     src: url('./../../assets/vendors/webfonts/SFProDisplay-HeavyItalic.eot?#iefix') format('embedded-opentype'),
         url('./../../assets/vendors/webfonts/SFProDisplay-HeavyItalic.woff2') format('woff2'),
@@ -60,7 +60,7 @@
 }
 
 @font-face {
-    font-family: 'SF Pro Display';
+    font-family: 'Poppins';
     src: url('./../../assets/vendors/webfonts/SFProDisplay-UltralightItalic.eot');
     src: url('./../../assets/vendors/webfonts/SFProDisplay-UltralightItalic.eot?#iefix') format('embedded-opentype'),
         url('./../../assets/vendors/webfonts/SFProDisplay-UltralightItalic.woff2') format('woff2'),
@@ -73,7 +73,7 @@
 }
 
 @font-face {
-    font-family: 'SF Pro Display';
+    font-family: 'Poppins';
     src: url('./../../assets/vendors/webfonts/SFProDisplay-LightItalic.eot');
     src: url('./../../assets/vendors/webfonts/SFProDisplay-LightItalic.eot?#iefix') format('embedded-opentype'),
         url('./../../assets/vendors/webfonts/SFProDisplay-LightItalic.woff2') format('woff2'),
@@ -86,7 +86,7 @@
 }
 
 @font-face {
-    font-family: 'SF Pro Display';
+    font-family: 'Poppins';
     src: url('./../../assets/vendors/webfonts/SFProDisplay-Medium.eot');
     src: url('./../../assets/vendors/webfonts/SFProDisplay-Medium.eot?#iefix') format('embedded-opentype'),
         url('./../../assets/vendors/webfonts/SFProDisplay-Medium.woff2') format('woff2'),
@@ -99,7 +99,7 @@
 }
 
 @font-face {
-    font-family: 'SF Pro Display';
+    font-family: 'Poppins';
     src: url('./../../assets/vendors/webfonts/SFProDisplay-SemiboldItalic.eot');
     src: url('./../../assets/vendors/webfonts/SFProDisplay-SemiboldItalic.eot?#iefix') format('embedded-opentype'),
         url('./../../assets/vendors/webfonts/SFProDisplay-SemiboldItalic.woff2') format('woff2'),
@@ -112,7 +112,7 @@
 }
 
 @font-face {
-    font-family: 'SF Pro Display';
+    font-family: 'Poppins';
     src: url('./../../assets/vendors/webfonts/SFProDisplay-ThinItalic.eot');
     src: url('./../../assets/vendors/webfonts/SFProDisplay-ThinItalic.eot?#iefix') format('embedded-opentype'),
         url('./../../assets/vendors/webfonts/SFProDisplay-ThinItalic.woff2') format('woff2'),
