--- a/src/css/scss/pages/_category.scss
+++ b/src/css/scss/pages/_category.scss
@@ -83,14 +83,14 @@
               line-height: 1.5;
               color: #000000;
               font-weight: bold;
-              font-family: "SF Pro Display";
+              font-family: "Poppins";
               margin-bottom: 4px;
             }
             p{
               font-size: 12px;
               line-height: 1.5;
               color: #000000;
-              font-family: "SF Pro Display";
+              font-family: "Poppins";
             }
           }
           .link{
@@ -98,7 +98,7 @@
               font-size: 12px;
               line-height: 1.5;
               color: #f7992c;
-              font-family: "SF Pro Display";
+              font-family: "Poppins";
               .arrow {
                 border: solid #f7992c;
                 border-width: 0 2px 2px 0;
