--- a/src/css/scss/base/_base.scss
+++ b/src/css/scss/base/_base.scss
@@ -38,7 +38,7 @@ a {
   line-height: 1.5;
   color: #000000;
   font-weight: bold;
-  font-family: "SF Pro Display";
+  font-family: "Poppins";
   margin-bottom: 8px;
 }
 @-webkit-keyframes flash {
