--- a/src/css/scss/base/_typography.scss
+++ b/src/css/scss/base/_typography.scss
@@ -4,7 +4,7 @@
 body {
   color: $text-color;
   font: normal 125% / 1.4 $text-font-stack;
-  font-family: "SF Pro Display";
+  font-family: "Poppins";
 }
 a{
   text-decoration: none;
