--- a/src/css/scss/components/_button.scss
+++ b/src/css/scss/components/_button.scss
@@ -20,7 +20,7 @@
   font-size: 16px;
   line-height: 1.5;
   color: #f7992c;
-  font-family: "SF Pro Display";
+  font-family: "Poppins";
   .arrow {
     border: solid #f7992c;
     border-width: 0 2px 2px 0;
