--- a/src/css/scss/pages/_detail.scss
+++ b/src/css/scss/pages/_detail.scss
@@ -162,8 +162,7 @@
   .rourtes{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    border-top: 1px solid #0000002f;
-    border-bottom: 1px solid #0000002f;
+     border: 1px solid #0000002f;
     grid-gap: 1px;
     background-color: #0000002f;
     align-content: center;
@@ -230,7 +229,7 @@
   box-shadow: 0px 0px 30px 0px rgb(0 0 0 / 5%);
   border: 2px solid #ccc;
   .cb-title{
-    margin-bottom: 16px;
+    margin-bottom: 10px;
   }
   .cas-in {
     display: flex;
