--- a/src/css/scss/pages/_home.scss
+++ b/src/css/scss/pages/_home.scss
@@ -620,7 +620,7 @@
     // color: #000000;
     // margin: 0 auto;
     margin-bottom: 24px;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 1.5;
     color: #000000;
     font-weight: bold;
@@ -694,7 +694,7 @@
       right: 0;
       top: 0;
     }
-    &:last-child, &:nth-last-child(2){
+    &:last-child{
       &::after {
         display: none;
       }
@@ -931,8 +931,11 @@
   .category-carousel .owl-item.active:nth-child(odd)::after{
     content: "|";
   }
-  // .category-carousel .owl-item.active:first-child::after{
+  // .category-carousel .owl-item:nth-last-child(2):before{
   //   content: "|";
+  //         position: absolute;
+  //         right: 0;
+  //         top: 0;
   // }
   .category-section .cb-title{
     margin-bottom: 0px;
