--- a/src/css/scss/pages/_detail.scss
+++ b/src/css/scss/pages/_detail.scss
@@ -219,7 +219,14 @@
     color: #f7992c;
     display: block;
     text-align: center;
+    background: none;
+    border: 0;
+    align-items: center;
+    margin: 0 auto;
+    cursor: pointer;
+  
   }
+  .see-more.disabled{color: #a5a5a5;cursor: none;}
 
 }
 .route-info{
