--- a/src/css/scss/layout/_footer.scss
+++ b/src/css/scss/layout/_footer.scss
@@ -425,6 +425,9 @@
     
   }
 }
+.ac .ac-trigger.moreLink {
+  color: #f7992c;
+}
 @media (max-width: 1199.98px) {
   .footer-wrapper .middle-footer .lft-footmenu, .footer-wrapper .middle-footer .rgt-footmenu.m-footmenu, .footer-wrapper .middle-footer .m-footmenu .m-footlist{
     width: 50%;
