--- a/src/css/scss/layout/_header.scss
+++ b/src/css/scss/layout/_header.scss
@@ -605,7 +605,7 @@
           font-size: 14px;
           line-height: 40px;
           color: #000;
-          font-family: "Helvetica";
+          font-family: "p";
           display: block;
           cursor: pointer;
           padding: 0;
