--- a/src/css/scss/pages/_home.scss
+++ b/src/css/scss/pages/_home.scss
@@ -41,14 +41,14 @@
         line-height: 1;
         color: #ffffff;
         font-weight: bold;
-        font-family: "Helvetica";
+        font-family: "Poppins";
         margin-bottom: 16px;
         a{
           font-size: 24px;
           line-height: 1;
           color: #ffffff;
           font-weight: bold;
-          font-family: "Helvetica";
+          font-family: "Poppins";
           margin-bottom: 16px;
           font-weight: 600;
         }
@@ -399,7 +399,7 @@
           line-height: 24px;
           color: #000000;
           font-weight: bold;
-          font-family: "Helvetica";
+          font-family: "Poppins";
           margin-bottom: 8px;
         }
         .catname{
