--- a/src/css/scss/pages/_detail.scss
+++ b/src/css/scss/pages/_detail.scss
@@ -316,8 +316,66 @@
   }
   
 }
+
 .check-out-details .cas-in:last-child{
   margin-bottom: 16px;
+}
+
+// map hover effect
+.box{
+    background: rgba(247, 153, 44, 1);
+    text-align: center;
+    overflow: hidden;
+    position: relative;
+    transition: all 0.3s;
+}
+.box:hover{ box-shadow: 0 0 10px rgba(247, 153, 44, 0.3); }
+.box img{
+    width: 100%;
+    height: auto;
+    transform: rotate(0deg) scale(1);
+    transition: all .8s;
+}
+.box:hover img{
+    opacity: 0.3;
+    filter: grayscale(100%);
+}
+.box .box-content{
+    width: 100%;
+    text-align: center;
+    overflow: hidden;
+    transform: translateY(-50%);
+    position: absolute;
+    top: 50%;
+    left: 0;
+}
+.box .box-content .content{ overflow: hidden; }
+.box .title{
+    color: #fff;
+    font-size: 25px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin: 0 0 3px 0;
+    transform: translateY(250%);
+    transition: all 0.6s ease 0s;
+}
+.box .post{
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
+    font-style: italic;
+    margin: 0 0 10px;
+    display: block;
+    transform: translateY(250%);
+    transition: all 0.6s ease 0s;
+}
+.box:hover .title,
+.box:hover .post{
+    transform: translateY(0);
+}
+
+@media only screen and (max-width:990px){
+    .box{ margin: 0 0 30px; }
 }
 
 @media (max-width: 991.98px) {
