--- a/src/css/scss/layout/_footer.scss
+++ b/src/css/scss/layout/_footer.scss
@@ -15,14 +15,14 @@
     padding: 0;
     margin: 0;
   }
-  // background: #000000;
-  background: $black;
+  background: #eee;
+  // background: $black;
   padding: 40px 0;
 
   h2 {
-    color: $white;
+    color: #333;
     font-family: 'Poppins';
-    font-weight: normal;
+    font-weight: 600;
     font-style: normal;
     font-size: 18px;
     margin: 0 0 16px;
@@ -33,7 +33,7 @@
     font-size: 0;
     margin-bottom: 40px;
     padding-bottom: 30px;
-    border-bottom: 1px solid #474747;
+    border-bottom: 1px solid #d1d1d1;
     text-align: justify;
 
     li {
@@ -47,26 +47,26 @@
       
 
       a {
-        color: $white;
+        color: #333;
         font-family: 'Poppins';
-        font-weight: normal;
+        font-weight: 500;
         font-style: normal;
         font-size: 14px;
         line-height: 34px;
         text-align: left;
-        opacity: 0.6;
+        opacity: 1;
         position: relative;
         padding-right: 16px;
         &::after {
           content: "";
-          background: $white;
+          background: #333;
           width: 1px;
           height: 14px;
           position: absolute;
           right: 0;
           top: 50%;
           transform: translateY(-50%);
-          opacity: 0.6;
+          opacity:1;
         }
       }
     }
@@ -75,23 +75,25 @@
 
   .middle-footer {
     font-size: 0;
-    border-bottom: 1px solid #474747;
+    border-bottom: 1px solid #d1d1d1;
     .lft-footmenu,.rgt-footmenu{
       font-size: initial;
       display: inline-block;
       vertical-align: top;
     }
     .lft-footmenu{
-      width: 73.50%;
+      width: 80%;
+      display: inline-flex;
+      flex-wrap: wrap;
     }
     .rgt-footmenu.m-footmenu{
-      width: 26.50%;
+      width: 19%;
       .m-footlist {
         width: 100%;
         ul{
           li{
-            color: $white;
-            opacity: 0.6;
+            color: #333;
+            opacity: 1;
             overflow-wrap: break-word;
           }
         }
@@ -103,10 +105,17 @@
         font-size: initial;
         display: inline-block;
         vertical-align: top;        
-        width: 20%;
-        padding-right: 8px;
+        width: 19%;
+    padding-right: 8px;
+    border: 1px solid #d1d1d1;
+    padding: 1%;
+    margin-right: 1%;
+    box-sizing: border-box;
+    margin-bottom: 1%;
+    /* min-height: 300px; */
+    flex-direction: column;
         h3 {
-          color: $white;
+          color: #333;
           font-family: 'Poppins';
           font-weight: normal;
           font-style: normal;
@@ -118,18 +127,18 @@
 
         ul {
           list-style: outside none none;
-          margin: 0 0 40px;
+          margin: 0 0 10px;
           padding: 0;          
           li {            
             a {              
-              color: $white;
+              color: #333;
               font-family: 'Poppins';
-              font-weight: normal;
+              font-weight: 500;
               font-style: normal;
               font-size: 14px;
               line-height: 26px;
               text-align: left;
-              opacity: 0.6;
+              opacity: 1;
             }
           }
         }
@@ -144,20 +153,20 @@
     align-items: flex-start;
   }
   .tc-box{
-    color: #ffffff;
+    color: #333;
     font-size: 12px;
     line-height: 1.5;
     width: 70%;
     strong{
       font-size: 12px;
       line-height: 1.5;
-      color: #ffffff;
+      color: #333;
       font-family: "Poppins";
     }
     a{
       font-size: 12px;
       line-height: 1.5;
-      color: #ffffff8d;
+      color: #333;
       font-family: "Poppins";
       margin: 0 4px;
     }
@@ -175,14 +184,14 @@
       vertical-align: middle;
       svg{
         g{
-          fill: #ffffff;
+          fill: #333;
         }
         
       }
 
       &:hover{
         svg{
-          background-color: #ffffff;
+          background-color: #333;
           border-radius: 50px;
           padding: 4px;
           transition: 1s;
@@ -210,9 +219,9 @@
     background-color: transparent;
   }
   .ac .ac-trigger{
-    color: #ffffff;
+    color: #333;
     font-family: "Poppins";
-    font-weight: normal;
+    font-weight: 600;
     font-style: normal;
     font-size: 16px;
     margin: 0;
@@ -363,7 +372,7 @@
       }
       &:hover {
         svg{
-          background-color: #ffffff;
+          background-color: #333;
           border-radius: 50px;
           padding: 4px;
           transition: 1s;
@@ -404,7 +413,7 @@
     width: 44px;
     height: 44px;
     border-radius: 22px;
-    background-color: #ffffff;
+    background-color: #333;
     border: 2px solid #000000;
     font-size: 24px;
     line-height: 32px;
@@ -443,7 +452,7 @@
     margin: 0;
   }
   .middle-footer .m-footmenu .m-footlist {
-    border-bottom: 1px solid #474747;
+    border-bottom: 1px solid #d1d1d1;
   }
   .footer-wrapper .ac .ac-trigger::after {
     visibility: visible;
