--- a/src/css/scss/layout/_footer.scss
+++ b/src/css/scss/layout/_footer.scss
@@ -90,11 +90,21 @@
       width: 19%;
       .m-footlist {
         width: 100%;
+        border: 0;
+        margin-right: 0;
+        padding-left:20px;
         ul{
+          
           li{
             color: #333;
             opacity: 1;
             overflow-wrap: break-word;
+            
+          }li:nth-child(1),li:nth-child(4),li:nth-child(7),li:nth-child(10),li:nth-child(12){
+            padding-bottom: 10px;
+            font-weight: 500;
+          }li:nth-child(3), li:nth-child(6), li:nth-child(9), li:nth-child(12), li:nth-child(14){
+            font-weight: 600;
           }
         }
       }
@@ -439,7 +449,7 @@
 }
 @media (max-width: 1199.98px) {
   .footer-wrapper .middle-footer .lft-footmenu, .footer-wrapper .middle-footer .rgt-footmenu.m-footmenu, .footer-wrapper .middle-footer .m-footmenu .m-footlist{
-    width: 50%;
+    width: 48%;
   }
 }
 @media (max-width: 991.98px) {
@@ -447,6 +457,7 @@
     width: 100%;
     padding-right: 0;
   }
+  .footer-wrapper .middle-footer .rgt-footmenu.m-footmenu .m-footlist{padding-left: 0;}
   .footer-wrapper .middle-footer .m-footmenu .m-footlist h3 {
     padding: 8px 0;
     margin: 0;
