--- a/src/css/scss/layout/_footer.scss
+++ b/src/css/scss/layout/_footer.scss
@@ -457,7 +457,7 @@
     width: 100%;
     padding-right: 0;
   }
-  .footer-wrapper .middle-footer .rgt-footmenu.m-footmenu .m-footlist{padding-left: 0;}
+  .footer-wrapper .middle-footer .rgt-footmenu.m-footmenu .m-footlist{padding:1%;border: 1px solid #d1d1d1;}
   .footer-wrapper .middle-footer .m-footmenu .m-footlist h3 {
     padding: 8px 0;
     margin: 0;
