--- a/src/css/scss/pages/_home.scss
+++ b/src/css/scss/pages/_home.scss
@@ -943,3 +943,35 @@
     margin-top: 16px;
   }
 }
+
+// // 1st point add height 
+// .visit-place-section .lft-img img {
+//   height: 48px;
+// }
+
+// // 2nd point is in the discussion
+
+// // 3rd point will be resolve by dev Team
+
+// // 4th Remove max height
+// #journeyCarousel .banner-item img {
+//   /* max-height: 323px; */   
+// }
+
+// // 5th point add below css
+// .visit-place-section .visit-flex .check-out .cas-rb .rb-lg .rb-stck img {
+//   border-radius: 10px;
+// }
+// .check-out-blogs .cas-rb .rb-lg .rb-stck img {
+//   border-radius: 10px;
+// }
+// .check-out-blogs .cas-rb .rb-lg .rb-lg-txt{ bottom: 4px;}
+
+// // 6th Point will be resolve by dev Team
+
+// // 7th Point add below rule
+// .banner-section #catNavBar .category-carousel .active a{
+//   color: #f7992c !important;
+// }
+// // 8th ppint is in the discussion
+
