--- a/src/css/scss/pages/_home.scss
+++ b/src/css/scss/pages/_home.scss
@@ -910,6 +910,12 @@
 }
 
 @media (max-width: 767.98px) { 
+  .banner-carousel .owl-nav button.owl-prev, .banner-carousel .owl-nav button.owl-next {    
+    width: 25px;
+    height: 25px;
+  
+}
+
   .category-section .cat-box {
     padding: 16px;
     width: 100%;
@@ -942,6 +948,13 @@
     font-size: 20px;
     margin-top: 16px;
   }
+  #journeyCarousel .banner-item img {
+    max-height: inherit;
+    font-size: 14px;
+    line-height: 30px;
+    width: auto;
+}
+
 }
 
 // // 1st point add height 
