--- a/src/css/scss/pages/_detail.scss
+++ b/src/css/scss/pages/_detail.scss
@@ -377,11 +377,20 @@
 .distance img{
   border-radius: 5px;
 }
-
+.largest-section .blog-carousel .item .content .text-content h3 {
+  font-size: 16px;
+  line-height: 24px;
+  color: #000000;
+  font-weight: bold;
+  font-family: "Poppins";
+  margin-bottom: 8px;
+}
 @media only screen and (max-width:990px){
     .box{ margin: 0 0 30px; }
 }
-
+.largest-section .blog-carousel .item .content .text-content h3 {
+  font-size: 14px;
+}
 @media (max-width: 991.98px) {
   .detail-page .grid-container {
     margin: 16px 0;
