--- a/src/css/scss/base/_typography.scss
+++ b/src/css/scss/base/_typography.scss
@@ -27,8 +27,9 @@ p,h1,h2,h3,h4,h5,h6{
 }
 
 .cb-title{
-  font-size:16px;
+  font-size:21px;
   line-height: 1.5;
   color: #000000;
   font-weight: bold;
+  text-align: center;
 }
