--- a/src/css/scss/base/_helpers.scss
+++ b/src/css/scss/base/_helpers.scss
@@ -76,7 +76,7 @@ a{
     line-height: 1.5;
     color: #ffffff;
     font-weight: 500;
-    font-family: "Montserrat";
+    font-family: "Poppins";
     margin-right: 16px;
   }
   img{
@@ -100,7 +100,7 @@ a{
     text-transform: uppercase;
     color: #ffffff;
     font-weight: 700;
-    font-family: "Montserrat";
+    font-family: "Poppins";
     display: inline-block;
     margin: 0 16px;
     &.active{
@@ -116,7 +116,7 @@ a{
   line-height: 1.5;
   color: #ffffff;
   font-weight: 500;
-  font-family: "Montserrat";
+  font-family: "Poppins";
   margin-bottom: 24px;
   span{
     font-size: 16px;
@@ -145,7 +145,7 @@ a{
       line-height: 30px;
       color: #000000;
       font-weight: 600;
-      font-family: "Montserrat";
+      font-family: "Poppins";
     }
   }
   .art-card{
@@ -167,7 +167,7 @@ a{
     line-height: 1.5;
     color: #ffffff;
     font-weight: 500;
-    font-family: "Montserrat";
+    font-family: "Poppins";
     padding: 0 8px;
   }
   select{
@@ -191,7 +191,7 @@ a{
     line-height: 1.5;
     color: #ffffff;
     font-weight: 500;
-    font-family: "Montserrat";
+    font-family: "Poppins";
     option {
       color: #000000;
     }
@@ -261,7 +261,7 @@ ul#tabs-nav li.active {
       line-height: 1.5;
       color: #ffffff;
       font-weight: 700;
-      font-family: "Montserrat";
+      font-family: "Poppins";
       margin-top: 16px;
     }
     .brand-link{
@@ -270,7 +270,7 @@ ul#tabs-nav li.active {
       text-decoration: underline;
       color: #ffffff;
       font-weight: 400;
-      font-family: "Montserrat";
+      font-family: "Poppins";
     }
     .image-content{
       display: grid;
