--- a/src/css/scss/components/_button.scss
+++ b/src/css/scss/components/_button.scss
@@ -7,7 +7,7 @@
   text-transform: uppercase;
   color: #ffffff;
   font-weight: 700;
-  font-family: "Montserrat";
+  font-family: "Poppins";
   background-color: #0000004a;
   padding: 8px 36px;
   border: none;
