--- a/src/css/scss/pages/_individual.scss
+++ b/src/css/scss/pages/_individual.scss
@@ -176,7 +176,7 @@
                     border: none;
                     cursor: pointer;
                     color: rgb(255, 255, 255);
-                    font-family: Montserrat, sans-serif;
+                    font-family: Poppins, sans-serif;
                     font-weight: 700;
                     font-size: 14px;
                     letter-spacing: normal;
@@ -348,7 +348,7 @@
 
 
 .check-out-blogs {
-    margin-top: 25px;
+    // margin-top: 25px;
     padding: 25px 20px 30px;
     border-radius: 5px;
     background-color: $white;
