--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -12,7 +12,7 @@ body {
     background-color: var(--page-background);
 }
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-weight: 900;
 }
 
