--- a/src/css/scss/pages/_detail.scss
+++ b/src/css/scss/pages/_detail.scss
@@ -5,7 +5,7 @@
     border-radius: 8px;
     padding: 0;
     padding: 32px;
-    margin: 32px 0;
+    margin:0 0 32px 0;
     .title-box{
       border-bottom: 1px solid #0000002f;
       // padding: 0;
@@ -234,6 +234,7 @@
   padding: 32px;
   border-radius: 8px;
   background-color: #ffffff;
+  margin-bottom: 32px;
   .content{
     margin-bottom: 32px;
     .title{
@@ -459,6 +460,7 @@
   }
   .route-info {
     padding: 24px 16px;
+    margin-bottom: 16px;
   }
   .detail-page .largest-section{
     margin: 16px 0;
