--- a/src/css/scss/components/_button.scss
+++ b/src/css/scss/components/_button.scss
@@ -86,7 +86,7 @@
     justify-content: center;
     border-radius: 0;
     &:hover{
-      background-color: transparent;
+      // background-color: transparent;
     }
     .arrow {
       border: solid #000000;
