--- a/src/css/scss/base/_owl.theme.default.min.scss
+++ b/src/css/scss/base/_owl.theme.default.min.scss
@@ -22,8 +22,8 @@
   border-radius: 3px;
 }
 .owl-theme .owl-nav [class*="owl-"]:hover {
-  background: #869791;
-  color: #fff;
+  // background: #869791;
+  // color: #fff;
   text-decoration: none;
 }
 .owl-theme .owl-nav .disabled {
@@ -50,5 +50,5 @@
 }
 .owl-theme .owl-dots .owl-dot.active span,
 .owl-theme .owl-dots .owl-dot:hover span {
-  background: #869791;
+  // background: #869791;
 }
