--- a/src/css/scss/pages/_detail.scss
+++ b/src/css/scss/pages/_detail.scss
@@ -86,6 +86,8 @@
         }
       }
 
+      .head-ttl{ font-size: 16px;}
+
     }
 
   }
@@ -429,23 +431,23 @@
     margin-right: 12px;
   }
   .grid-container .flex-containt .reach-box {
-    grid-template-columns: 1fr 1fr;
+    // grid-template-columns: 1fr 1fr;
     border: none; 
     grid-gap: 1px;
     background-color: transparent;
     align-content: center;
   }
   .grid-container .flex-containt .reach-box .fromTo{
-    grid-column: 1 / 3;
+    // grid-column: 1 / 3;
     border-bottom: 1px solid #d7d7d7;
   }
   .grid-container .flex-containt .reach-box .distance{
-    grid-column: 1 / 2;
+    // grid-column: 1 / 2;
     border-bottom: 1px solid #d7d7d7;
 
   }
   .grid-container .flex-containt .reach-box .time{
-    grid-column: 2 / 3;
+    // grid-column: 2 / 3;
     border-bottom: 1px solid #d7d7d7;
 
   }
@@ -454,7 +456,9 @@
     text-align: left;
     font-size: 12px;
   }
-  .grid-container .flex-containt .reach-box .fromTo{font-size: 14px;}
+  .grid-container .flex-containt .reach-box .fromTo{font-size: 12px;}
+  .grid-container .flex-containt .reach-box .head-ttl{font-size: 12px;}
+  .grid-container .flex-containt .reach-box .fromTo img{ width: 16px; margin-right: 12px;margin-top: 3px;}
   .grid-container .flex-containt .calculator{
     margin-bottom: 16px;
   }
